# GameTape

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: version.h.in
scripts/: fine_tune_model_from_scratch.sh  generate_box_files.sh  generate_fine_tuned_model.sh  generate_lstmf_files.sh  generate_training_files.sh
src/: main.cpp
src/utils/: file_utils.cpp  file_utils.hpp  ocr_utils.cpp  ocr_utils.hpp  screenshot_utils.cpp  screenshot_utils.hpp  string_utils.cpp  string_utils.hpp  window_utils.cpp  window_utils.hpp
tools/get_screen_location/: CMakeLists.txt  Makefile
tools/get_screen_location/src/: main.cpp
